     playcount updates and scrobbles to get skipped (BR 337849, 406701)
   * Fix 'save playlist' button in playlist controls
   * Sort playlist sorting breadcrumb menu by localized names (BR 277146)
   * Miscellaneous fixes to saving and loading various playlist file formats,
     resulting also in improved compatibility with other software
     (including BR 435779, BR 333745)


VERSION 3.0.1
  FEATURES:
   * Added an option to copy image to clipboard in Wikipedia applet, and a clickable
     notification if a non-Wikipedia link was clicked.
   * Added an option to select if track's artist is shown for entries under various
     artists / different album artist in context browser (BR 276039, BR 248101)
   * Indicate which search option is active in Wikipedia applet (BR 332010)

  CHANGES:
   * Amarok now depends on KDE Frameworks 5.78.
   * Improve strings in user interface (incl. BR 343896, BR 234854)
   * Reduce CPU usage by minimized/hidden analyzer (BR 390063) and other components.

  BUGFIXES:
   * Various tag match bias, APG and collection filtering related fixes (BR 375565,
     BR 406751, BR 435810, BR 382456)
   * Ignore any infinite values when reading replaygain tags (BR 486084)
   * Avoid volume getting set to 0 when phonon-vlc playback is stopped (BR 442319)
   * Playlist duplicate track deletion fixes (BR 313791)


VERSION 3.0.0
  FEATURES:
   * Added a visual hint that context view applets can be resized in edit mode.
   * Display missing metadata errors in Wikipedia applet UI.
   * Add a button to stop automatic Wikipedia page updating. (BR 485813)

  CHANGES:
   * Replace defunct lyricwiki with lyrics.ovh as lyrics provider for now. (BR 455937)
   * Show only relevant items in wikipedia applet right click menu (BR 323941), use
     monobook skin for opened links and silently ignore non-wikipedia links.
   * Don't show non-functional play mode controls in dynamic mode (BR 287055)

  BUGFIXES: